# substreams-dca-dot-fun

./: .gitignore  Cargo.toml  README.md
clickhouse/: Cargo.toml  Makefile  README.md  schema.0.blocks.sql  schema.1.events.sql  schema.sql  substreams.yaml
clickhouse/src/: lib.rs
common/: Cargo.toml
common/src/: clickhouse.rs  lib.rs
dca-dot-fun/: Cargo.toml  Makefile  README.md  substreams.yaml
dca-dot-fun/src/: lib.rs
examples/: .env.example  clickhouse.config.ts  clickhouse.create_order.ts  clickhouse.tables.ts  dcadotfun.ts  package.json  schema.graphql
proto/: substreams.yaml
proto/src/pb/: dca.dot.fun.v1.rs  mod.rs
proto/v1/: dca-dot-fun.proto
